@@ -10,8 +10,9 @@ import com.buschmais.xo.neo4j.embedded.impl.datastore.EmbeddedDatastore;
  */
 public interface EmbeddedNeo4jServer {
 
-    void initialize(EmbeddedDatastore embeddedDatastore, String listenAddress, Integer httpPort, ClassLoader classLoader, Collection<Class<?>> procedureTypes,
-        Collection<Class<?>> functionTypes);
+    // TODO This method should take com.buschmais.jqassistant.core.store.api.configuration.Embedded as parameter instead of the single values. Requires moving the embedded Neo4j server to the core store module.
+    void initialize(EmbeddedDatastore embeddedDatastore, String listenAddress, Integer httpPort, Integer boltPort, ClassLoader classLoader,
+        Collection<Class<?>> procedureTypes, Collection<Class<?>> functionTypes);
 
     void start();
 
