@@ -6,6 +6,7 @@
 * Upgraded to Neo4j 4.4.34
 * Removed quiet period for shutting down internal Neo4j server
 * Removed support for `memory://` store urls from distributions
+* Log Neo4j URL including connection and authentication parameters to console after starting embedded server
 
 == 2.2.0
 * Upgraded to Neo4j 4.4.32 and 5.19.0
